[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/pong/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/pong/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/pong/pong.gd" type="Script" id=3]
[ext_resource path="res://ui/Consolas.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 193.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 518, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.75, 313.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 252.25, 5 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 4 )

[node name="Pong" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 470.0 ]
}

[node name="Player1" parent="." instance=ExtResource( 1 )]
position = Vector2( 200, 600 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 824, 600 )
facing = -1
player_control = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 512, 674 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -193.5 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
margin_left = -6.0
margin_top = -387.0
margin_right = 6.0

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 508, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 508, 610 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -5, 304.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 1030.75, 304.5 )
shape = SubResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 112 )
collision_layer = 2

[node name="p1" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="p1"]
position = Vector2( 252.75, 597 )
shape = SubResource( 4 )

[node name="p2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="p2"]
position = Vector2( 769.75, 597 )
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score1" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
custom_fonts/font = SubResource( 5 )
text = "120"

[node name="Score2" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
custom_fonts/font = SubResource( 5 )
text = "120"
align = 2

[connection signal="body_entered" from="p1" to="." method="ball_fall" binds= [ 1 ]]
[connection signal="body_entered" from="p2" to="." method="ball_fall" binds= [ 2 ]]
